# all_solvit

./: Dockerfile  LICENSE  README.md  docker-compose.yml  global_config.py  main.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/: config.py
src/_core/: Readme.md  __init__.py  utils.py
src/_core/auth/: __init__.py  app.py  dependencies.py  jwt.py  middleware.py
src/_core/database/: __init__.py
src/_core/enum/: __init__.py
src/_core/error_handler/: __init__.py  handler.py  setup.py
src/_core/exceptions/: __init__.py  app_exception.py  main_error.py  token_exception.py  user_exception.py
src/_core/models/: __init__.py  user_models.py  valid_util.py
src/_core/repositories/: __init__.py  main_repository.py  user_repository.py
src/_core/response/: __init__.py  meta.py  user_response.py
src/_core/schemas/: __init__.py  base_schemas.py  exceptions.py  user_schemas.py
src/_core/services/: BaseServise.py  __init__.py  user_service.py
src/api_tracker/: Readme.md  app.py  config.py  main.py
src/api_tracker/api/: __init__.py  dependencies.py
src/api_tracker/local_core/: __init__.py
src/chat_bot_binance/: app.db  config.py  main.py
src/chat_bot_binance/enum/: __init__.py  db_schemas.py
src/chat_bot_binance/router/: __init__.py  binance_router.py  broadcast.py
src/chat_bot_binance/web/: __init__.py  btc_check.py
src/quiz_platform/: Readme.md  __init__.py  app.py  config.py  main.py
tests/: conftest.py  pytest.ini  utils.py
tests/_core/: conftest.py
tests/api_tracker/: __init__.py  conftest.py
tests/quiz_platform/: conftest.py
(+84 files in other folders)
